# af-hypermodern-python

./: LICENSE  README.md  noxfile.py  pyproject.toml
src/af_hypermodern_python/: console.py
src/tests/: test_console.py  test_wikipedia.py
