[tool.poetry]
name = "af-hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/adriennefranke/af-hypermodern-python"
repository = "https://github.com/adriennefranke/af-hypermodern-python"
keywords = ["hypermodern"]
authors = ["adriennefranke <18449966+adriennefranke@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.23.0"

[tool.poetry.scripts]
af-hypermodern-python = "af_hypermodern_python.console:main"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.10.0"
pytest-mock = "^3.1.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["af_hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
